--- a/frontend/components/trip_map/style.scss
+++ b/frontend/components/trip_map/style.scss
@@ -101,6 +101,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 500;
 }
 .photo {
   width: 700px;
